--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ Django==1.8.1
 django-ajax==0.2.0
 django-toolbelt==0.0.1
 django-widget-tweaks==1.3
+djangoajax==2.2.15
 gunicorn==19.3.0
+PIL==1.1.7
 Pillow==2.8.1
 psycopg2==2.6
 static3==0.6.0
